--- a/roles/bin/defaults/main.yml
+++ b/roles/bin/defaults/main.yml
@@ -2,4 +2,5 @@
 utility_link:
   src: '{{ dotfiles_roles }}/bin/files/bin'
   dest: '{{ user_home }}/bin'
-utility_package: 'libvips-tools'
+utility_package:
+  install: 'libvips-tools'
