--- a/roles/libreoffice/defaults/main.yml
+++ b/roles/libreoffice/defaults/main.yml
@@ -1,7 +1,8 @@
 ---
 utility_package:
-  - 'libreoffice-calc'
-  - 'libreoffice-writer'
+  install:
+    - 'libreoffice-calc'
+    - 'libreoffice-writer'
 
 utility_copy:
   dir: '{{ user_config }}/libreoffice'
