--- a/roles/mega/defaults/main.yml
+++ b/roles/mega/defaults/main.yml
@@ -1,12 +1,17 @@
 ---
 # https://mega.nz/linux/MEGAsync/
 utility_key: 'https://mega.nz/linux/MEGAsync/xUbuntu_18.04/Release.key'
+
 utility_repository:
   - repo: 'deb https://mega.nz/linux/MEGAsync/xUbuntu_18.04/ ./'
     filename: 'megasync'
-utility_package: 'megasync'
+
+utility_package:
+  install: 'megasync'
+
 utility_startup:
   - name: 'megasync'
     delay: 60
+
 mega:
   dest: '{{ user_home }}/sync'
