--- a/roles/keepassxc/defaults/main.yml
+++ b/roles/keepassxc/defaults/main.yml
@@ -1,7 +1,10 @@
 ---
 utility_repository:
   - repo: 'ppa:phoerious/keepassxc'
-utility_package: 'keepassxc'
+
+utility_package:
+  install: 'keepassxc'
+
 keepassxc:
   base: 'psst.kdbx'
   dest: '{{ user_config }}/keepassxc'
