--- a/roles/nvm/defaults/main.yml
+++ b/roles/nvm/defaults/main.yml
@@ -2,6 +2,8 @@
 utility_git_repository:
   - repo: 'git://github.com/creationix/nvm.git'
     dest: '{{ user_home }}/.nvm'
+
 utility_package:
-  - build-essential
-  - libssl-dev
+  install:
+    - build-essential
+    - libssl-dev
