--- a/roles/sublime/defaults/main.yml
+++ b/roles/sublime/defaults/main.yml
@@ -1,11 +1,16 @@
 ---
 utility_key: 'https://download.sublimetext.com/sublimehq-pub.gpg'
+
 utility_repository:
   - repo: 'deb https://download.sublimetext.com/ apt/stable/'
-utility_package: 'sublime-text'
+
+utility_package:
+  install: 'sublime-text'
+
 utility_link:
   src: '{{ dotfiles_roles }}/sublime/files/sublime-text-3'
   dest: '{{ user_config }}/sublime-text-3'
+
 utility_gitignore:
   ignore:
     - 'roles/sublime/files/sublime-text-3/*'
