--- a/roles/mpv/defaults/main.yml
+++ b/roles/mpv/defaults/main.yml
@@ -1,4 +1,6 @@
 ---
+# https://mpv.io/manual/stable/
+
 utility_repository:
   - repo: 'ppa:mc3man/mpv-tests'
 
@@ -10,4 +12,5 @@ utility_link:
   dest: '{{ user_config }}/mpv'
 
 utility_gitignore:
-  ignore: 'roles/mpv/files/mpv/watch_later/'
+  ignore:
+    - 'roles/mpv/files/mpv/watch_later/'
