atom don't like json :c

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 roles/mpv/files/mpv/watch_later/
 
 roles/atom/files/atom/*
-!roles/atom/files/atom/config.json
-!roles/atom/files/atom/keymap.json
+!roles/atom/files/atom/config.cson
+!roles/atom/files/atom/keymap.cson
 !roles/atom/files/atom/packages.list
 !roles/atom/files/atom/styles.less
 
