get rid of python2.7 everywhere

--- a/roles/atom/tasks/main.yml
+++ b/roles/atom/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: install users packages
-  shell:
-    'apm install --packages-file {{ role_path }}/files/atom/packages.list'
+# - name: install users packages
+#   shell:
+#     'apm install --packages-file {{ role_path }}/files/atom/packages.list'
 
 # apm list --installed --bare | grep '^[^@]\+' -o > packages.list
