--- a/hosts.yml
+++ b/hosts.yml
@@ -3,6 +3,7 @@ local:
   hosts: localhost
   vars:
     ansible_connection: local
+    ansible_python_interpreter: '{{ ansible_playbook_python }}'
     user_home: '{{ lookup("env","HOME") }}'
     user_config: '{{ user_home }}/.config'
     dotfiles_directory: '{{ user_home }}/dotfiles'
