--- a/roles/emacs/defaults/main.yml
+++ b/roles/emacs/defaults/main.yml
@@ -13,5 +13,5 @@ utility_gitignore:
   ignore:
     - 'roles/emacs/files/emacs.d/*'
   excluded:
-    - '!roles/emacs/files/emacs.d/custom/'
-    - '!roles/emacs/files/emacs.d/init.el'
+    - 'roles/emacs/files/emacs.d/custom/*'
+    - 'roles/emacs/files/emacs.d/init.el'
