--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,14 @@
 roles/code/files/Code/*
 !roles/code/files/Code/User/*
-
-
+#
 roles/copyq/files/copyq/*
 !roles/copyq/files/copyq/copyq.conf
-
-
+#
 roles/emacs/files/emacs.d/*
-!roles/emacs/files/emacs.d/custom/
+!roles/emacs/files/emacs.d/custom/*
 !roles/emacs/files/emacs.d/init.el
-
-
-*.retry
-
-
+#
 roles/sublime/files/sublime-text-3/*
 !roles/sublime/files/sublime-text-3/Packages/User/Preferences.sublime-settings
+#
+*.retry
