--- a/roles/sublime/defaults/main.yml
+++ b/roles/sublime/defaults/main.yml
@@ -15,4 +15,4 @@ utility_gitignore:
   ignore:
     - 'roles/sublime/files/sublime-text-3/*'
   excluded:
-    - '!roles/sublime/files/sublime-text-3/Packages/User/Preferences.sublime-settings'
+    - 'roles/sublime/files/sublime-text-3/Packages/User/Preferences.sublime-settings'
