--- a/roles/code/defaults/main.yml
+++ b/roles/code/defaults/main.yml
@@ -7,6 +7,9 @@ utility_repository:
 
 utility_package:
   install: 'code'
+  # pip install -U autopep8 --user
+  # /usr/bin/python3 -m pip install -U pylint --user
+  # -U, --upgrade
 
 utility_link:
   src: '{{ dotfiles_roles }}/code/files/Code'
@@ -23,6 +26,6 @@ vscode_extensions:
   - 'dracula-theme.theme-dracula'
   - 'EditorConfig.EditorConfig'
   - 'esbenp.prettier-vscode'
-  - 'haaaad.ansible'
   - 'joshpeng.sublime-babel-vscode'
   - 'ms-python.python'
+  - 'vscoss.vscode-ansible'
