--- a/roles/firefox/defaults/main.yml
+++ b/roles/firefox/defaults/main.yml
@@ -1,7 +1,10 @@
 ---
 utility_package:
-  install: 'firefox'
-  remove: 'firefox-locale-en'
+  apt:
+    install:
+      - 'firefox'
+    remove:
+      - 'firefox-locale-en'
 
 utility_copy:
   dir: '{{ user_home }}/.mozilla'
