--- a/roles/shutter/defaults/main.yml
+++ b/roles/shutter/defaults/main.yml
@@ -1,6 +1,8 @@
 ---
 utility_package:
-  install: 'shutter'
+  apt:
+    install:
+      - 'shutter'
 
 shutter:
   dest: '{{ user_home }}/.shutter'
