--- a/roles/utility/tasks/package.yml
+++ b/roles/utility/tasks/package.yml
@@ -1,19 +1,39 @@
 ---
-- name: package | install
+#apt
+- name: package | apt | install
   become: yes
   apt:
     force_apt_get: yes
-    name: '{{ item.install }}'
+    name: '{{ item.apt.install }}'
     state: latest
-  when: item.install is defined
+  when:
+    - item.apt is defined
+    - item.apt.install is defined
   with_items: '{{ utility_package_list }}'
 
-- name: package | remove
+- name: package | apt | remove
   become: yes
   apt:
     force_apt_get: yes
     purge: yes
-    name: '{{ item.remove }}'
+    name: '{{ item.apt.remove }}'
     state: absent
-  when: item.remove is defined
+  when:
+    - item.apt is defined
+    - item.apt.remove is defined
+  with_items: '{{ utility_package_list }}'
+
+# pip
+- name: package | pip | install
+  pip:
+    name: |-
+        {{ item.pip.install
+          | map(attribute="name")
+          | list
+        }}
+    extra_args: '--user --upgrade'
+    state: latest
+  when:
+    - item.pip is defined
+    - item.pip.install is defined
   with_items: '{{ utility_package_list }}'
