--- a/roles/code/tasks/main.yml
+++ b/roles/code/tasks/main.yml
@@ -1,6 +1,8 @@
 ---
 # https://code.visualstudio.com/docs/editor/extension-gallery#_command-line-extension-management
 - name: install users packages
-  shell:
+  command:
     'code --install-extension {{ item }}'
+  register: register_result
+  changed_when: 'not register_result.stdout | regex_search("(is already installed)")'
   with_items: '{{ vscode_extensions }}'
