--- a/roles/zsh/defaults/main.yml
+++ b/roles/zsh/defaults/main.yml
@@ -9,3 +9,7 @@ utility_git_repository:
     dest: '{{ user_home }}/.oh-my-zsh'
   - repo: 'git://github.com/zsh-users/zsh-autosuggestions.git'
     dest: '{{ user_home }}/.oh-my-zsh/custom/plugins/zsh-autosuggestions'
+
+utility_link:
+  src: '{{ dotfiles_roles }}/zsh/files/.zshrc'
+  dest: '{{ user_home }}/.zshrc'
