--- a/roles/utility/defaults/main.yml
+++ b/roles/utility/defaults/main.yml
@@ -23,7 +23,7 @@ utility_package:
     install:
       - name: glances
 
-gitignore_tmp: '/tmp/ignore_list'
+# gitignore_tmp: '/tmp/ignore_list'
 
 utility_gitignore:
   ignore:
