--- a/hosts.yml
+++ b/hosts.yml
@@ -4,6 +4,7 @@ local:
   vars:
     ansible_connection: local
     ansible_python_interpreter: '{{ ansible_playbook_python }}'
+    helpers_tempfile: '{{ dotfiles_roles }}/helpers/tempfile.yml'
     user_home: '{{ lookup("env","HOME") }}'
     user_config: '{{ user_home }}/.config'
     dotfiles_directory: '{{ user_home }}/dotfiles'
